--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -21,7 +21,7 @@
 #
 - type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/pranavbudhiraja/'                  # Fill with your Linkedin homepage
+  url:  'https://www.linkedin.com/in/pranav-budhiraja/'                  # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
