--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,9 @@ social:
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Pranav Budhiraja
   email: pranavbudhiraja25@gmail.com # change to your email address
-#  links:
+  links:
     # The first element serves as the copyright owner's link
-#    - https://twitter.com/username # change to your Twitter homepage
+    - https://pranavbudhiraja.com # change to your Twitter homepage
 #    - https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
