added disqs support

--- a/_config.yml
+++ b/_config.yml
@@ -107,12 +107,12 @@ social_preview_image: # string, local or CORS resources
 # boolean type, the global switch for TOC in posts.
 toc: true
 
-comments: true
+comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: disqus
   # The provider options are as follows:
   disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname: pranavbudhiraja.disqus.com
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
