--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ comments:
   provider: disqus
   # The provider options are as follows:
   disqus:
-    shortname: pranavbudhiraja.disqus.com
+    shortname: 'pranavbudhiraja.disqus.com'
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
