--- a/_config.yml
+++ b/_config.yml
@@ -109,23 +109,23 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: disqus
+  provider: giscus
   # The provider options are as follows:
   disqus:
-    shortname: 'pranavbudhiraja'
+    shortname: #
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: pranavb25/pranavb25.github.io
+    repo_id: "R_kgDOMyvZJQ"
+    category: "Announcements"
+    category_id: "DIC_kwDOMyvZJc4Cik6L"
     mapping: # optional, default to 'pathname'
     strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
+    input_position: "top"
     lang: # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
