--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: giscus
+  provider:
   # The provider options are as follows:
   disqus:
     shortname: #
