modified site tagline

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Kolkata
 
 title: Pranav Budhiraja # the main title
 
-tagline: Mostly thought dumps # it will display as the subtitle
+tagline: Mostly thoughts on tech, finance and strategy # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Thought dumps by Pranav Budhiraja.
