--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ title: Pranav Budhiraja # the main title
 tagline: Mostly thoughts on tech, finance and strategy # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Thought dumps by Pranav Budhiraja.
+  Hi, I am Pranav Budhiraja. Currently a Product Manger at Razorpay, I have previously been an entrepreneur and an engineer. My work has spanned across Fintech, Healthtech and Semiconductors. 
+  
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
